# Importance-Aware-Regularization-IAR

./: .gitignore  experimental_plan.md  paper_draft.md  pyproject.toml  train.py
models/: mlp.py
modules/: attention.py
research/: benchmarking.ipynb  iar.ipynb
research/runs/Jul29_18-05-50_cs-01k1bj6wbyfptcybk2fda848sf/: events.out.tfevents.1753812350.cs-01k1bj6wbyfptcybk2fda848sf.17671.0
research/runs/Jul29_18-06-24_cs-01k1bj6wbyfptcybk2fda848sf/: events.out.tfevents.1753812384.cs-01k1bj6wbyfptcybk2fda848sf.17671.1
utils/: regularization.py
working/kaggle/working/runs/Jul30_10-09-30_f0751555dc55/: events.out.tfevents.1753870170.f0751555dc55.76.0
working/kaggle/working/runs/Jul30_10-16-49_f0751555dc55/: events.out.tfevents.1753870609.f0751555dc55.76.1
working/kaggle/working/runs/Jul30_10-23-36_f0751555dc55/: events.out.tfevents.1753871016.f0751555dc55.216.0
working/kaggle/working/runs/Jul30_10-26-00_f0751555dc55/: events.out.tfevents.1753871160.f0751555dc55.216.1
